# task-based-AI-orchestration

./: .gitignore  README.md  TODO.md  install.sh  pyproject.toml
examples/: task.example.yaml
src/ai_task/: cli.py  config.py  gitops.py  models.py  prompting.py
src/ai_task/templates/: execute.j2  investigate.j2  plan.j2  review.j2
src/ai_task_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
